@@ -14,6 +14,10 @@ small - this just lets others know that the file has changed if nothing
 else.  With this, include the file(s) that you changed.
 ------------------------------------------------------------------------------
 
+Remove obsolete map fields in header.
+ common/map.c
+Nicolas Weeger 2010-03-14
+
 Basic map browsing. Report archetype use in maps.
 Modified files:
  utils/cre/cre.pro CREArchetypePanel.cpp CREMainWindow.{cpp,h}
